# Hacspec_KZG

./: Cargo.toml
hacspec_kzg/: Cargo.toml
hacspec_kzg/src/: lib.rs  main.rs
proofs/fstar/extraction/: .depend  Hacspec_bls12_381_.fst  Hacspec_lib.Seq.fst  Hacspec_lib.Traits.fst  Hacspec_sha256.fst  Kzg.Curve.fst  Kzg.fst  Rust_primitives.Integers.fsti.backup  Secret_integers.fst  hax.fst.config.json  stubs.depend
src/: curve.rs  lib.rs
test_of_bls12-lib/: Cargo.toml
test_of_bls12-lib/src/: main.rs
tests/: test.rs
