[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
hacspec-bls12-381 = { path = "../hacspec/examples/bls12-381" }
rand = "0.9"
hacspec-sha256 = {path = "../hacspec/examples/sha256"}
hacspec-lib = {path = "../hacspec/lib"}
# maybe required
# specified in the generated fstar makefile

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"  # Optional, for the #[quickcheck] attribute
