[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
hacspec-bls12-381 = { path = "../hacspec/examples/bls12-381" }
rand = "0.9"
hacspec-sha256 = {path = "../hacspec/examples/sha256"}
hacspec-lib = {path = "../hacspec/lib"}
#bls12_381 = { git = "https://github.com/zkcrypto/bls12_381.git", version = "0.8.0" }
bls12_381 = { path = "../bls12_381"}

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"  # Optional, for the #[quickcheck] attribute
